# XeTPC

./: README.md  generate.C
E_fields/: XeTPC_efield.C
Gas_Simulation/: CMakeLists.txt  LICENSE  fieldlines.C  gem.C  gem.py
Generate_gasfile/: generate.C
Plotting/: CMakeLists.txt  gas_visualization.C  xe_500v.gas
gas_file/: xe_100_10e5Vcm.gas  xe_100_500Vcm.gas
